mobile styling tweaks, off center callout fix at lg-breakpoint

--- a/assets/scss/_components/block-overlap.scss
+++ b/assets/scss/_components/block-overlap.scss
@@ -140,6 +140,13 @@
     position: relative;
   }
 
+  .author-listing .media{
+    margin-bottom: .5rem;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+
   .chat-bubble {
     position: absolute;
     bottom: 1.5rem;
