--- a/assets/scss/_components/filters.scss
+++ b/assets/scss/_components/filters.scss
@@ -25,8 +25,9 @@
       margin-bottom: 0;
       transition: all .3s ease;
       @extend .underline-change;
+      padding-bottom: .1rem;
       background-size: 0% 1px !important;
-      background-position: center 98% !important;
+      background-position: center 100% !important;
       display: inline-block;
     }
   }
