--- a/assets/scss/_components/img-hero.scss
+++ b/assets/scss/_components/img-hero.scss
@@ -1,5 +1,5 @@
 .img-hero {
-  height: 300px;
+  height: 270px;
   width: 100%;
   // margin-left: -15px;
   // margin-right: -15px;
