--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -41,7 +41,7 @@
   .event-title {
     margin-bottom: 2rem;
     h1 {
-      margin-bottom: 0;
+      margin-bottom: .5rem;
     }
   }
   aside {
