--- a/assets/scss/_insights-detail.scss
+++ b/assets/scss/_insights-detail.scss
@@ -12,6 +12,9 @@
       @extend .color-change;
     }
   }
+  ul{
+    padding-left: 1rem;
+  }
   li {
     margin-bottom: 1rem;
   }
