--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -181,7 +181,7 @@ body {
 article.main,
 article.gated-content {
   background-color: white;
-  padding: 2rem;
+  padding: 1.5rem;
   margin-left: -($grid-gutter-width-base/2);
   margin-right: -($grid-gutter-width-base/2);
 
